// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BrowsePage > Snapshots > renders error state snapshot 1`] = `
<div
  class="flex w-full flex-grow flex-col px-6 py-4 lg:px-12"
>
  <div
    data-testid="active-filters"
  >
    ActiveFilters - 
    0
     filters
  </div>
  <div
    class="mt-6 flex flex-grow gap-8"
  >
    <aside
      class="hidden w-64 flex-shrink-0 rounded-lg p-4 shadow-sm lg:block"
    >
      <div
        data-testid="sidebar-filters"
      >
        SidebarFilters - 
        0
         brands, 
        0
         models, 
        35
         years
      </div>
    </aside>
    <div
      class="flex max-h-full flex-1 flex-grow flex-col justify-between overflow-x-hidden rounded-lg p-4 shadow-sm"
    >
      <div>
        Error al cargar las versiones.
        {"message":"Network error"}
      </div>
      <div
        data-testid="pagination"
      >
        Pagination - Page 
        1
         of 
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`BrowsePage > Snapshots > renders loading state snapshot 1`] = `
<div
  class="flex w-full flex-grow flex-col px-6 py-4 lg:px-12"
>
  <div
    data-testid="active-filters"
  >
    ActiveFilters - 
    0
     filters
  </div>
  <div
    class="mt-6 flex flex-grow gap-8"
  >
    <aside
      class="hidden w-64 flex-shrink-0 rounded-lg p-4 shadow-sm lg:block"
    >
      <div
        data-testid="sidebar-filters"
      >
        SidebarFilters - 
        0
         brands, 
        0
         models, 
        35
         years
      </div>
    </aside>
    <div
      class="flex max-h-full flex-1 flex-grow flex-col justify-between overflow-x-hidden rounded-lg p-4 shadow-sm"
    >
      <div>
        Cargando...
      </div>
      <div
        data-testid="pagination"
      >
        Pagination - Page 
        1
         of 
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`BrowsePage > Snapshots > renders success state with data snapshot 1`] = `
<div
  class="flex w-full flex-grow flex-col px-6 py-4 lg:px-12"
>
  <div
    data-testid="active-filters"
  >
    ActiveFilters - 
    0
     filters
  </div>
  <div
    class="mt-6 flex flex-grow gap-8"
  >
    <aside
      class="hidden w-64 flex-shrink-0 rounded-lg p-4 shadow-sm lg:block"
    >
      <div
        data-testid="sidebar-filters"
      >
        SidebarFilters - 
        3
         brands, 
        0
         models, 
        35
         years
      </div>
    </aside>
    <div
      class="flex max-h-full flex-1 flex-grow flex-col justify-between overflow-x-hidden rounded-lg p-4 shadow-sm"
    >
      <div
        data-testid="versions-grid"
      >
        VersionsGrid - 
        2
         versions
      </div>
      <div
        data-testid="pagination"
      >
        Pagination - Page 
        1
         of 
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`BrowsePage > Snapshots > renders success state with empty data snapshot 1`] = `
<div
  class="flex w-full flex-grow flex-col px-6 py-4 lg:px-12"
>
  <div
    data-testid="active-filters"
  >
    ActiveFilters - 
    0
     filters
  </div>
  <div
    class="mt-6 flex flex-grow gap-8"
  >
    <aside
      class="hidden w-64 flex-shrink-0 rounded-lg p-4 shadow-sm lg:block"
    >
      <div
        data-testid="sidebar-filters"
      >
        SidebarFilters - 
        3
         brands, 
        0
         models, 
        35
         years
      </div>
    </aside>
    <div
      class="flex max-h-full flex-1 flex-grow flex-col justify-between overflow-x-hidden rounded-lg p-4 shadow-sm"
    >
      <div
        data-testid="versions-grid"
      >
        VersionsGrid - 
        0
         versions
      </div>
      <div
        data-testid="pagination"
      >
        Pagination - Page 
        1
         of 
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`BrowsePage > Snapshots > renders with filters applied snapshot 1`] = `
<div
  class="flex w-full flex-grow flex-col px-6 py-4 lg:px-12"
>
  <div
    data-testid="active-filters"
  >
    ActiveFilters - 
    0
     filters
  </div>
  <div
    class="mt-6 flex flex-grow gap-8"
  >
    <aside
      class="hidden w-64 flex-shrink-0 rounded-lg p-4 shadow-sm lg:block"
    >
      <div
        data-testid="sidebar-filters"
      >
        SidebarFilters - 
        1
         brands, 
        0
         models, 
        35
         years
      </div>
    </aside>
    <div
      class="flex max-h-full flex-1 flex-grow flex-col justify-between overflow-x-hidden rounded-lg p-4 shadow-sm"
    >
      <div
        data-testid="versions-grid"
      >
        VersionsGrid - 
        1
         versions
      </div>
      <div
        data-testid="pagination"
      >
        Pagination - Page 
        1
         of 
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`BrowsePage > Snapshots > renders with multiple pages snapshot 1`] = `
<div
  class="flex w-full flex-grow flex-col px-6 py-4 lg:px-12"
>
  <div
    data-testid="active-filters"
  >
    ActiveFilters - 
    0
     filters
  </div>
  <div
    class="mt-6 flex flex-grow gap-8"
  >
    <aside
      class="hidden w-64 flex-shrink-0 rounded-lg p-4 shadow-sm lg:block"
    >
      <div
        data-testid="sidebar-filters"
      >
        SidebarFilters - 
        2
         brands, 
        0
         models, 
        35
         years
      </div>
    </aside>
    <div
      class="flex max-h-full flex-1 flex-grow flex-col justify-between overflow-x-hidden rounded-lg p-4 shadow-sm"
    >
      <div
        data-testid="versions-grid"
      >
        VersionsGrid - 
        1
         versions
      </div>
      <div
        data-testid="pagination"
      >
        Pagination - Page 
        2
         of 
        10
      </div>
    </div>
  </div>
</div>
`;

exports[`BrowsePage > Snapshots > renders without brand models data snapshot 1`] = `
<div
  class="flex w-full flex-grow flex-col px-6 py-4 lg:px-12"
>
  <div
    data-testid="active-filters"
  >
    ActiveFilters - 
    0
     filters
  </div>
  <div
    class="mt-6 flex flex-grow gap-8"
  >
    <aside
      class="hidden w-64 flex-shrink-0 rounded-lg p-4 shadow-sm lg:block"
    >
      <div
        data-testid="sidebar-filters"
      >
        SidebarFilters - 
        0
         brands, 
        0
         models, 
        35
         years
      </div>
    </aside>
    <div
      class="flex max-h-full flex-1 flex-grow flex-col justify-between overflow-x-hidden rounded-lg p-4 shadow-sm"
    >
      <div
        data-testid="versions-grid"
      >
        VersionsGrid - 
        0
         versions
      </div>
      <div
        data-testid="pagination"
      >
        Pagination - Page 
        1
         of 
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`HomePage > renders correctly and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="space-y-16"
  >
    <section
      class="bg-blue-50 px-6 py-16 text-center"
    >
      <h1
        class="mb-4 text-3xl font-bold md:text-5xl"
      >
        Find the best used car deals in Chile —
        <br />
        all in one place!
      </h1>
      <p
        class="mb-6 text-gray-600"
      >
        Compare prices across Chileautos, Yapo, and Facebook Marketplace instantly
      </p>
      <div
        class="mb-6 flex flex-wrap justify-center gap-4"
      >
        <button
          class="rounded-md border bg-white px-4 py-2 shadow-sm transition-shadow hover:shadow-md"
          type="button"
        >
          Rango de Precio
        </button>
        <button
          class="rounded-md border bg-white px-4 py-2 shadow-sm transition-shadow hover:shadow-md"
          type="button"
        >
          Marca
        </button>
        <button
          class="rounded-md border bg-white px-4 py-2 shadow-sm transition-shadow hover:shadow-md"
          type="button"
        >
          Tipo de Vehículo
        </button>
      </div>
    </section>
    <section
      class="flex flex-col items-center px-6"
      data-testid="featured-cars"
    >
      <h2
        class="mb-6 text-2xl font-semibold"
      >
        Autos Destacados
      </h2>
      <div
        class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4"
      >
        <div
          class="rounded-lg border bg-white p-4 shadow-sm"
        >
          <div
            class="mb-4 h-32 overflow-hidden rounded-md bg-gray-200"
          >
            <img
              alt="Toyota Yaris 2020"
              class="h-full w-full object-cover"
              data-nimg="1"
              decoding="async"
              height="128"
              loading="lazy"
              src="/_next/image?url=%2Fcar1.jpg&w=640&q=75"
              srcset="/_next/image?url=%2Fcar1.jpg&w=384&q=75 1x, /_next/image?url=%2Fcar1.jpg&w=640&q=75 2x"
              style="color: transparent;"
              width="300"
            />
          </div>
          <div
            class="flex w-full items-center justify-between"
          >
            <h3
              class="mb-1 font-semibold"
            >
              Toyota Yaris 2020
            </h3>
          </div>
          <p
            class="mb-2 text-sm text-gray-600"
          >
            $8.900.000 • Chileautos
          </p>
          <p
            class="text-sm text-gray-500"
          >
            45.000 • Desconocido
          </p>
          <a
            class="mt-4 block w-full rounded-md bg-blue-600 py-2 text-center text-sm text-white hover:bg-blue-700"
            href="/versions/123"
          >
            Ver detalles
          </a>
        </div>
      </div>
    </section>
    <section
      class="bg-gray-50 px-6 py-12 text-center"
    >
      <h2
        class="mb-2 text-2xl font-semibold"
      >
        Tendencias
      </h2>
      <p
        class="mb-6 text-sm text-gray-600"
      >
        Stay informed with real-time market analytics and price trends
      </p>
      <div
        class="mx-auto grid max-w-5xl grid-cols-1 gap-6 text-left md:grid-cols-3"
      >
        <div
          class="rounded-md border bg-white p-4"
        >
          <h4
            class="mb-2 font-semibold"
          >
            Popular Brands
          </h4>
          <ul
            class="space-y-1 text-sm text-gray-700"
          >
            <li>
              Toyota - 32%
            </li>
            <li>
              Hyundai - 26%
            </li>
            <li>
              Kia - 24%
            </li>
          </ul>
        </div>
        <div
          class="rounded-md border bg-white p-4"
        >
          <h4
            class="mb-2 font-semibold"
          >
            Price Trends
          </h4>
          <ul
            class="space-y-1 text-sm text-gray-700"
          >
            <li>
              SUVs: +5.2%
            </li>
            <li>
              Sedans: -2.1%
            </li>
            <li>
              Electric: +7.7%
            </li>
          </ul>
        </div>
        <div
          class="rounded-md border bg-white p-4"
        >
          <h4
            class="mb-2 font-semibold"
          >
            Market Activity
          </h4>
          <ul
            class="space-y-1 text-sm text-gray-700"
          >
            <li>
              New Listings: 234
            </li>
            <li>
              Avg. Days Listed: 45
            </li>
            <li>
              Total Active: 12,458
            </li>
          </ul>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
